update the cancel call to pass environment variabl